# eventus

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  build.rs  compose.yaml  flake.nix  subscriptions.db
benches/: fixed_size_hashmap.rs  index.rs  log_append.rs  message.rs  random_sequential.rs  segment.rs  stream_index.rs
eventus_v2/: Cargo.toml
eventus_v2/benches/: random_sequential.rs
eventus_v2/src/: bucket.rs  database.rs  error.rs  id.rs  lib.rs  main.rs  pool.rs
eventus_v2/src/bucket/: event_index.rs  flusher.rs  reader_thread_pool.rs  segment.rs  stream_index.rs  writer_thread_pool.rs
eventus_v2/src/bucket/segment/: reader.rs  reader_thread_pool.rs  writer.rs
examples/: bulk.rs  grpc_client.rs  simple_write.rs  transaction.rs  unique_stream_ids.rs
monitus/: Cargo.toml
monitus/src/: app.rs  main.rs
proto/: eventstore.proto
src/: actor.rs  bucket.rs  cli.rs  database.rs  error.rs  file_set.rs  fixed_size_hashmap.rs  id.rs  index.rs  lib.rs  main.rs  message.rs  reader.rs  segment.rs  server.rs  stream_index.rs  subscription_store.rs
src/bucket/: event_index.rs  flusher.rs  reader_thread_pool.rs  segment.rs  segment_set.rs  stream_index.rs  writer_thread_pool.rs
src/bucket/segment/: reader.rs  writer.rs
