[package]
name = "eventus_v2"
version = "0.0.0"
edition = "2021"

[dependencies]
ahash = "0.8"
bincode = "1.3.3"
boomphf = { version = "0.6.0", features = ["parallel", "serde"] }
bloomfilter = "3.0.1"
const-primes = "0.10.3"
crc32fast = "1.4.2"
num_cpus = "1.16.0"
polonius-the-crab = "0.4.1"
rand = "0.9"
rayon = "1.10.0"
# redb = "2.4.0"
serde = "1.0.218"
smallvec = "1.14.0"
thiserror = "2.0.11"
thread-priority = "1.2.0"
tokio = { version = "1.43.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
uuid = { version = "1", features = ["v4", "v8"] }
arc-swap = "1.7.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.16"

[[bench]]
name = "random_sequential"
harness = false
