[package]
name = "monitus"
version = "0.1.0"
edition = "2021"

[dependencies]
eventus.workspace = true

anyhow = "1.0.86"
chrono = "0.4.38"
crossterm = "0.27.0"
futures = "0.3.30"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
rmp-serde = "1.3.0"
serde-hjson = "0.9.1"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tonic = "0.11"
tui-scrollview = { git = "https://github.com/s9tpepper/tui-scrollview" } # "0.3.6"
